kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kino-gather-api
  namespace: default
  labels:
    app: kino-gather-api
spec:
  selector:
    app: kino-gather-api
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
